--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
         .about-img img {
             max-width: 100%;
-            border-radius: 15px;
+            border-radius: 50%;
             border: 3px solid var(--primary-color);
             box-shadow: 0 0 25px rgba(255, 28, 28, 0.3);
             transition: transform 0.5s ease;
@@ -622,7 +622,7 @@
                 <h2 class="section-heading">About <span>Me</span></h2>
                 <div class="about-content">
                     <div class="about-img">
-                        <img src="myphoto.png" alt="Parash Biswas" onerror="this.onerror=null;this.src='https://placehold.co/400x500/000/fff?text=Image+Not+Found';">
+                        <img src="picture/myphoto.png" alt="Parash Biswas" onerror="this.onerror=null;this.src='https://placehold.co/400x500/000/fff?text=Image+Not+Found';">
                     </div>
                     <div class="about-text">
                         <h3>Passionate <span>Programmer</span> & Tech Enthusiast</h3>
@@ -648,7 +648,7 @@
                     <!-- Project Card 1: Weather App -->
                     <div class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="rain.png" alt="Weather App Icon">
+                            <img src="picture/rain.png" alt="Weather App Icon">
                         </div>
                         <h3>Weather App</h3>
                         <p>A dynamic weather forecast web application built with OpenWeatherMap API.</p>
@@ -662,7 +662,7 @@
                     <!-- Project Card 2: QR Code Generator -->
                     <div class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="qrcode.png" alt="QR Code Generator Icon">
+                            <img src="picture/qrcode.png" alt="QR Code Generator Icon">
                         </div>
                         <h3>QR Code Generator</h3>
                         <p>A web tool to instantly generate and download QR codes from user input.</p>
@@ -674,19 +674,25 @@
                         </div>
                     </div>
                     <!-- Project Card 3: Coming Soon -->
-                    <div class="project-card coming-soon">
-                         <div class="project-image-wrapper">
-                            <img src="ecom.png" alt="E-commerce Platform">
+                    <div class="project-card">
+                         <div class="project-image-wrapper" style="border: 2px solid yellow;">
+                             <img src="picture/kaben neki logo.jpg" alt="Khaben Naki">
                         </div>
-                        <h3>E-commerce Platform</h3>
-                        <p>A new exciting project is currently in development. Stay tuned for updates!</p>
+                        <h3>Khaben Naki – Restaurant Website</h3>
+                        <p>A fully responsive Bengali restaurant site with menu, reservation, and order features. Built using HTML, CSS, JS & Bootstrap 5.</p>
+                                                 <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="https://kabenneki.fwh.is" class="btn-project">Live Demo</a>
+                                <a href="#" class="btn-project">View Code</a>
+                            </div>
+                        </div>
                     </div>
                      <!-- Project Card 4: Coming Soon -->
                     <div class="project-card coming-soon">
                          <div class="project-image-wrapper">
-                            <img src="https://placehold.co/120x120/444444/888888?text=?" alt="Coming Soon">
+                            <img src="picture/ecom.png" alt="Coming Soon">
                         </div>
-                        <h3>Coming Soon</h3>
+                        <h3>E-commerce websites</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
                      <!-- Project Card 5: Coming Soon -->
