--- a/index.html
+++ b/index.html
@@ -708,6 +708,15 @@
                          <div class="project-image-wrapper">
                             <img src="https://placehold.co/120x120/444444/888888?text=?" alt="Coming Soon">
                         </div>
+                        </div>
+                        <h3>Game</h3>
+                        <p>I love you </p>
+                                                 <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="game.html" class="btn-project">Live Demo</a>
+                                <a href="#" class="btn-project">View Code</a>
+                            </div>
+                                                 </div>
                         <h3>Coming Soon</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
