--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
     ======================================================= -->
     <header class="header">
         <nav class="navbar container">
-            <a href="#home" class="logo">Parash<span>.</span></a>
+            <a href="game.html" class="logo">Parash<span>.</span></a>
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -711,12 +711,12 @@
                         </div>
                         <h3>Game</h3>
                         <p>I love you </p>
-                                                 <div class="project-overlay">
+                    <div class="project-overlay">
                             <div class="project-links">
                                 <a href="game.html" class="btn-project">Live Demo</a>
                                 <a href="#" class="btn-project">View Code</a>
                             </div>
-                                                 </div>
+                  </div>
                         <h3>Coming Soon</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
