--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Game ❤️</title>
+    <title>I really love you ❤️</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -126,7 +126,7 @@
     <div class="container">
         <div id="nameInput">
             <h1>Love Game ❤️</h1>
-            <p>Enter your name to begin</p>
+            <p>Your name is so special to me. Will you write it down for me?✍ </p>
             <input type="text" id="userName" placeholder="Your beautiful name">
             <button class="btn btn-primary" id="startBtn">Start</button>
         </div>
@@ -140,7 +140,7 @@
 
         <div id="responseContainer" class="hidden">
             <h1 id="responseText"></h1>
-            <button class="btn btn-primary" id="restartBtn">Play Again</button>
+            <button class="btn btn-primary" id="restartBtn">Love me Again</button>
         </div>
     </div>
 
