--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                         </div>
                         <h3>Khaben Naki – Restaurant Website</h3>
                         <p>A fully responsive Bengali restaurant site with menu, reservation, and order features. Built using HTML, CSS, JS & Bootstrap 5.</p>
-                                                 <div class="project-overlay">
+                        <div class="project-overlay">
                             <div class="project-links">
                                 <a href="https://kabenneki.fwh.is" class="btn-project">Live Demo</a>
                                 <a href="#" class="btn-project">View Code</a>
@@ -695,7 +695,21 @@
                         <h3>E-commerce websites</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
-                     <!-- Project Card 5: Coming Soon -->
+                   <!-- Project Card 3: Coming Soon -->
+                    <div class="project-card">
+                         <div class="project-image-wrapper" style="border: 2px solid yellow;">
+                             <img src="picture/kaben neki logo.jpg" alt="Khaben Naki">
+                        </div>
+                        <h3>Game</h3>
+                        <p>Built using HTML, CSS, JS & Bootstrap 5.</p>
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="game.html" class="btn-project">Live Demo</a>
+                                <a href="#" class="btn-project">View Code</a>
+                            </div>
+                        </div>
+                    </div>
+                     <!-- Project Card 6: Coming Soon -->
                     <div class="project-card coming-soon">
                          <div class="project-image-wrapper">
                             <img src="https://placehold.co/120x120/444444/888888?text=?" alt="Coming Soon">
@@ -703,22 +717,6 @@
                         <h3>Coming Soon</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
-                     <!-- Project Card 6: Coming Soon -->
-                    <div class="project-card coming-soon">
-                         <div class="project-image-wrapper">
-                            <img src="https://placehold.co/120x120/444444/888888?text=?" alt="Coming Soon">
-                        </div>
-                        </div>
-                        <h3>Game</h3>
-                        <p>I love you </p>
-                    <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="game.html" class="btn-project">Live Demo</a>
-                                <a href="#" class="btn-project">View Code</a>
-                            </div>
-                  </div>
-                        <h3>Coming Soon</h3>
-                        <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
                 </div>
             </div>
