--- a/index.html
+++ b/index.html
@@ -695,10 +695,10 @@
                         <h3>E-commerce websites</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
                     </div>
-                   <!-- Project Card 3: Coming Soon -->
+                   <!-- Project Card 5: Coming Soon -->
                     <div class="project-card">
-                         <div class="project-image-wrapper" style="border: 2px solid yellow;">
-                             <img src="picture/kaben neki logo.jpg" alt="Khaben Naki">
+                         <div class="project-image-wrapper" style="border: 2px solid rgb(255, 0, 0);">
+                             <img src="/picture/myphoto.png" alt="Parash">
                         </div>
                         <h3>Game</h3>
                         <p>Built using HTML, CSS, JS & Bootstrap 5.</p>
