--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                     <!-- Project Card 1: Weather App -->
                     <div class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="picture/rain.png" alt="Weather App Icon">
+                            <img src="picture/weather.gif" alt="Weather App Icon">
                         </div>
                         <h3>Weather App</h3>
                         <p>A dynamic weather forecast web application built with OpenWeatherMap API.</p>
@@ -662,7 +662,7 @@
                     <!-- Project Card 2: QR Code Generator -->
                     <div class="project-card">
                         <div class="project-image-wrapper">
-                            <img src="picture/qrcode.png" alt="QR Code Generator Icon">
+                            <img src="picture/QR code.gif" alt="QR Code Generator Icon">
                         </div>
                         <h3>QR Code Generator</h3>
                         <p>A web tool to instantly generate and download QR codes from user input.</p>
@@ -675,8 +675,8 @@
                     </div>
                     <!-- Project Card 3: Coming Soon -->
                     <div class="project-card">
-                         <div class="project-image-wrapper" style="border: 2px solid yellow;">
-                             <img src="picture/kaben neki logo.jpg" alt="Khaben Naki">
+                         <div class="project-image-wrapper">
+                             <img src="picture/kaben naki.gif" alt="Khaben Naki">
                         </div>
                         <h3>Khaben Naki – Restaurant Website</h3>
                         <p>A fully responsive Bengali restaurant site with menu, reservation, and order features. Built using HTML, CSS, JS & Bootstrap 5.</p>
@@ -690,7 +690,7 @@
                      <!-- Project Card 4: Coming Soon -->
                     <div class="project-card coming-soon">
                          <div class="project-image-wrapper">
-                            <img src="picture/ecom.png" alt="Coming Soon">
+                            <img src="picture/E-commerce.gif" alt="Coming Soon">
                         </div>
                         <h3>E-commerce websites</h3>
                         <p>A new exciting project is currently in development. Stay tuned for updates!</p>
@@ -698,7 +698,7 @@
                    <!-- Project Card 5: Coming Soon -->
                     <div class="project-card">
                          <div class="project-image-wrapper" style="border: 2px solid rgb(255, 0, 0);">
-                             <img src="/picture/myphoto.png" alt="Parash">
+                             <img src="/picture/love.gif" alt="LOVE">
                         </div>
                         <h3>Game</h3>
                         <p>Built using HTML, CSS, JS & Bootstrap 5.</p>
@@ -709,17 +709,20 @@
                             </div>
                         </div>
                     </div>
-                     <!-- Project Card 6: Coming Soon -->
-                    <div class="project-card coming-soon">
-                         <div class="project-image-wrapper">
-                            <img src="https://placehold.co/120x120/444444/888888?text=?" alt="Coming Soon">
+                   <!-- Project Card 6: Coming Soon -->
+                    <div class="project-card">
+                         <div class="project-image-wrapper" style="border: 2px solid rgb(255, 0, 0);">
+                             <img src="/picture/typing.gif" alt="LOVE">
                         </div>
-                        <h3>Coming Soon</h3>
-                        <p>A new exciting project is currently in development. Stay tuned for updates!</p>
+                        <h3>typing practice</h3>
+                        <p>Built using HTML, CSS, JavaScript.</p>
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="typing.html" class="btn-project">Live Demo</a>
+                                <a href="#" class="btn-project">View Code</a>
+                            </div>
+                        </div>
                     </div>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <!-- ======================================================
